# wotb

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  binding.gyp  functions.cc  functions.h  index.js  package.json  readme.md  release.sh  travis.yml  wot.cpp  wot_struct.h  wotb.cc
ci/travis/: before_install.sh
tests/: memleak.js  paths.js  test.js
wotc/: CMakeLists.txt  main.cpp  wot.cpp  wot.h  wot_struct.h
wotcpp/: CMakeLists.txt  FileWoT.cpp  MemoryWoT.cpp  log.cpp  main.cpp  misc.cpp  node.cpp  webOfTrust.cpp
wotcpp/include/: AbstractWoT.h  FileWoT.h  MemoryWoT.h  distanceResult.h  log.h  misc.h  node.h  webOfTrust.h  wotSet.h  wotStep.h
wotcpp/include/simulation/: Certification.h  CertificationPool.h  Duniter.h  Identity.h  IdentityPool.h  Statistiques.h  StatsDuBloc.h  StatsDuJour.h  StatsDuTour.h
wotcpp/simulation/: Certification.cpp  CertificationPool.cpp  Duniter.cpp  Identity.cpp  IdentityPool.cpp  Statistiques.cpp
